# commandops

./: .pypirc  pyproject.toml
src/commandops/: __init__.py  commandops.py
src/commandops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
